@@ -18,7 +18,7 @@ smp_config_option="Symmetric multi-processing support"
 # TODO: update
 fdisk="fdisk.txt;cfdisk.txt"
 network="supports-tftp;supports-bootp;supports-nfsroot"
-boot="bootable-disk;bootable-usb"
+boot="bootable-disk;bootable-usb;isohybrid-unsupported"
 frontend="newt;gtk"
 other="supports-wireless;supports-pcmcia;supports-serial-console"
 smp="smp-alternatives"
