@@ -20,7 +20,7 @@ fdisk="fdisk.txt;cfdisk.txt"
 network="supports-tftp;supports-bootp;supports-nfsroot"
 # For Lenny i386 does not have floppy images
 #boot="supports-floppy-boot;bootable-disk;bootable-usb"
-boot="bootable-disk;bootable-usb"
+boot="bootable-disk;bootable-usb;isohybrid-unsupported"
 frontend="newt;gtk"
 other="supports-wireless;supports-pcmcia;supports-serial-console"
 smp="supports-smp-somtimes"
