@@ -135,7 +135,15 @@ It's also possible to install from removable USB storage devices. For
 example a USB keychain can make a handy &debian; install medium that you
 can take with you anywhere.
 
-</para><para>
+</para><para condition="isohybrid-supported">
+
+The easiest way to prepare your USB memory stick is to download any
+Debian CD or DVD image that will fit on it, and write the CD image directly
+to the memory stick. Of course this will destroy anything already
+on the memory stick. This works because Debian CD images are
+"isohybrid" images that can boot both from CD and from USB drives.
+
+</para><para condition="isohybrid-unsupported">
 
 The easiest way to prepare your USB memory stick is to download
 <filename>hd-media/boot.img.gz</filename>, and use gunzip to extract the 256 MB
