@@ -64,6 +64,11 @@ installation-guide (2010xxxx) UNRELEASED; urgency=low
   * Fix "/etc/init.d/dhcpd3-server" typo (should be
     /etc/init.d/dhcp3-server), and unfuzzy all translations (LP: #666726).
 
+  [ Joey Hess ]
+  * Updated USB stick documentation to describe the much simpler, more
+    flexible, and likely more robust use of isohybrid images. All i386
+    and amd64 ISO images are now isohybrid.
+
  -- Samuel Thibault <sthibault@debian.org>  Mon, 06 Sep 2010 00:56:02 +0200
 
 installation-guide (20100518) unstable; urgency=low
